# opencf

./: .gitignore  COPYING  Makefile.am  README.md  configure.ac  opencf.files
include/: bdm-defs.hh  bdm.hh  coldfire.hh  core.hh  driver-core.hh  driver-pemu.hh  elf.hh  fs.hh  getopts.hh  parser.hh  trace.hh  utils.hh  version.hh
src/: bdm.cc  core.cc  elf.cc  fs.cc  getopts.cc  main.cc  parser.cc  trace.cc  utils.cc
src/drivers/: driver-core.cc  driver-pemu.cc
